force-app/main/default/objects/BSF_Access_Control_Rule__mdt/BSF_Access_Control_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Access Control Rule metadata to store the configuration of providing permissions to the new objects and fields created during every release.</description>
    <label>Access Control Rule</label>
    <pluralLabel>Access Control Rules</pluralLabel>
</CustomObject>