force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Component_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Component_API_Names__c</fullName>
    <description>HRP-15953 Used only when Rule Type is &apos;Apex Class&apos; or &apos;Visualforce Page&apos;. A comma-separated list of the API names of the Apex classes or pages to grant access to.</description>
    <label>Component API Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>