force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Names__c</fullName>
    <inlineHelpText>HRP-15953 Used only when Rule Type is &apos;Object/Field&apos;. A comma-separated list of field API names. If this field is blank, the rule applies to the entire object (OLS). If it is populated, the rule applies only to the specified fields (FLS).</inlineHelpText>
    <label>Field API Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>