force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HRP-15953 Used only when Rule Type is &apos;Apex Class&apos; or &apos;Visualforce Page&apos;. If checked, grants access to the specified components. If unchecked, it can be used to define a rule for revoking access.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>