force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/PermissionsCreate__c.field-meta.xml
<CustomField>
    <fullName>PermissionsCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsCreate</label>
    <type>Checkbox</type>
</CustomField>