force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/PermissionsDelete__c.field-meta.xml
<CustomField>
    <fullName>PermissionsDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsDelete</label>
    <type>Checkbox</type>
</CustomField>