force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/PermissionsEdit__c.field-meta.xml
<CustomField>
    <fullName>PermissionsEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsEdit</label>
    <type>Checkbox</type>
</CustomField>