force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/PermissionsRead__c.field-meta.xml
<CustomField>
    <fullName>PermissionsRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermissionsRead</label>
    <type>Checkbox</type>
</CustomField>