force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Release_Tag__c.field-meta.xml
<CustomField>
    <fullName>Release_Tag__c</fullName>
    <description>HRP-15953 A unique identifier that groups all rules for a specific deployment or release. This is the primary key the AccessControlManager Class uses to select which rules to process.</description>
    <inlineHelpText>A unique identifier for the release</inlineHelpText>
    <label>Release Tag</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>