force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>HRP-15953 A discriminator field that defines the type of component being permissioned. This determines which of the subsequent fields are relevant for this rule.</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object/Field</fullName>
                <default>true</default>
                <label>Object/Field</label>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>