force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>HRP-15953 Used only when Rule Type is &apos;Object/Field&apos;. The API name of the SObject for which Object-Level or Field-Level security is being set.</description>
    <label>SObject API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>