force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Target_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Target_API_Names__c</fullName>
    <description>HRP-15953 A comma-separated list of the API names for the Profiles or Permission Sets that will receive the permission.</description>
    <label>Target API Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>