force-app/main/default/objects/BSF_Access_Control_Rule__mdt/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <description>HRP-15953 Specifies the targets are Permission Sets.</description>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permission Set</fullName>
                <default>true</default>
                <label>Permission Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>