force-app/main/default/objects/BSF_Access_Control_Rule__mdt/listViews/All_New.listView-meta.xml
<ListView>
    <fullName>All_New</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SObject_API_Name__c</columns>
    <columns>Target_Type__c</columns>
    <columns>Field_API_Names__c</columns>
    <filterScope>Everything</filterScope>
    <label>All New</label>
    <language>en_US</language>
</ListView>