force-app/main/default/objects/BSF_Access_Control_Rule__mdt/listViews/Release_Tag_View.listView-meta.xml
<ListView>
    <fullName>Release_Tag_View</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject_API_Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Release_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <label>Release Tag View</label>
    <language>en_US</language>
</ListView>